--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
         <div class="main-menu-items">
             <ul class="main-menu-list">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#chapter">Chapters</a></li>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#takeaways">Takeaways</a></li>
@@ -54,7 +54,7 @@
 
              <div class="mobile-menu-items">
             <ul class="mobile-menu-list">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#chapter">Chapters</a></li>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#takeaways">Takeaways</a></li>
