--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="main-menu-items">
             <ul class="main-menu-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#chapter">Chapters</a></li>
+                <li><a href="#chapters">Chapters</a></li>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#takeaways">Takeaways</a></li>
                 <li><a href="#author">Author</a></li>
@@ -55,7 +55,7 @@
              <div class="mobile-menu-items">
             <ul class="mobile-menu-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#chapter">Chapters</a></li>
+                <li><a href="#chapters">Chapters</a></li>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#takeaways">Takeaways</a></li>
                 <li><a href="#author">Author</a></li>
